# ReCodeAgent

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
configs/: prompt_templates.yaml
data/oxidizer_translations/stats/: Cargo.toml
data/oxidizer_translations/stats/src/: __synthetic.rs  correlation.rs  cumulative_sum.rs  data.rs  describe.rs  deviation.rs  distances.rs  entropy.rs  errors.rs  examples.rs  geometric_distribution.rs  legacy.rs  lib.rs  load.rs  max.rs  mean.rs  median.rs  min.rs  mode.rs  norm.rs  outlier.rs  percentile.rs  quartile.rs  regression.rs  round.rs  sample.rs  sigmoid.rs  softmax.rs  sum.rs  util.rs  variance.rs
data/oxidizer_translations/stats/tests/: correlation_test.rs  cumulative_sum_test.rs  data_test.rs  describe_test.rs  deviation_test.rs  distances_test.rs  entropy_test.rs  errors_test.rs  geometric_distribution_test.rs  legacy_test.rs  load_test.rs  max_test.rs  mean_test.rs  median_test.rs  min_test.rs  mode_test.rs  nist_test.rs  norm_test.rs  outlier_test.rs  percentile_test.rs  quartile_test.rs  regression_test.rs  round_test.rs  sample_test.rs  sigmoid_test.rs  softmax_test.rs  sum_test.rs  test_utils_test.rs  util_test.rs  variance_test.rs
data/tool_projects/oxidizer/checkdigit/rust/: Cargo.toml  build.rs  interoperation.json  rust_pieces.json
data/tool_projects/oxidizer/checkdigit/rust/exec-snapshots/: (*github.com-osamingo-checkdigit.damm).Generate.json  (*github.com-osamingo-checkdigit.isbn10).Generate.json  (*github.com-osamingo-checkdigit.isbn13).Generate.json  (*github.com-osamingo-checkdigit.luhn).Generate.json  (github.com-osamingo-checkdigit.damm).Verify.json  (github.com-osamingo-checkdigit.isbn10).Verify.json  github.com-osamingo-checkdigit.NewEAN13.json  github.com-osamingo-checkdigit.NewEAN8.json  github.com-osamingo-checkdigit.NewISBN13.json  github.com-osamingo-checkdigit.NewITF.json  github.com-osamingo-checkdigit.NewSSCC.json  github.com-osamingo-checkdigit.isNotNumber.json
data/tool_projects/oxidizer/checkdigit/rust/include/: runtime.h
data/tool_projects/oxidizer/checkdigit/rust/src/: __synthetic.rs  checkdigit.rs  damm.rs  example.rs  gtin.rs  isbn.rs  lib.rs  luhn.rs  verhoeff.rs
docker-env/: Dockerfile  docker_build.sh  docker_run.sh  docker_shell.sh  docker_stop.sh  generate_agent_config.py  prepare_baseagent_settings.py
scripts/: run.sh  (+3 more)
(+714 files in other folders)
