[package]
name = "wspace"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"


# rand = "0.8.4"
# regex = "1.10.2"
lazy_static = "1.4.0"
# time = "0.3.36"
# text_io = "0.1.12"
base64 = "0.22.1"
# chrono = "0.4.38"
# unicode-segmentation = "1.11.0"
# hex = "0.4.3"
# rug = "1.26.1"
# num-bigfloat = "1.7.1"
# num-traits = "0.2.19"
# num-bigint = "0.4.6"
# url = "2.5.4"
# cssparser = "0.34.0"
# html5ever = "0.29.1"
# rusttype = "0.9.3"
# svg = "0.18.0"
# regex-syntax = "0.8.5"
# flate2 = "1.0.35"
# image = "0.24"
# png = "0.17.16"
# chacha20poly1305 = "0.10.1"
# aes-gcm = "0.10.3"
# ed25519-dalek = "2.1.1"
# orion = "0.17.8"
# nix = "0.29.0"
# p256 = "0.13.2"
# hkdf = "0.12.4"
# rsa = "0.9.7"
# ipnet = "2.11.0"
# blowfish = "0.9.1"

once_cell = "1.19.0"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["full"] }
ordered-float = "4.6.0"
delegate = "0.13.1"
# mock = { path = "mock" }
chrono = "0.4.40"
rand = "0.9.0"
