[package]
name = "test-target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# bolero = { version = "0.10.0", features = ["arbitrary"] }

[dependencies]
libc = "0.2.150"
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["arbitrary_precision", "float_roundtrip"] }
serde_repr = "0.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
once_cell = "1.19.0"


rand = "0.8.4"
regex = "1.10.2"
lazy_static = "1.4.0"
time = "0.3.36"
text_io = "0.1.12"
base64 = "0.22.1"
chrono = "0.4.38"
unicode-segmentation = "1.11.0"
astro-float = "0.9.4"
rug = "1.26.1"

anyhow = "=1.0.97"
assert-json-diff = "2.0.2"
serde_with = "3.10.0"
derivative = "2.2.0"
typetag = "0.2.18"
delegate = "0.13.1"
derive_more = { version = "1.0.0", features = ["full"] }
ordered-float = "4.6.0"

mock = { path = "../../mock" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
reuse_debug = []
# mock = []

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
